--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   cloud_firestore: ^3.1.18
+  country_code_picker: ^2.0.2
+  firebase_auth: ^3.4.1
+  flutter_spinkit: ^5.1.0
+  email_validator: ^2.0.1
+  file_picker: ^3.0.4
+  firebase_storage: ^10.3.1
 
 
 
