--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,10 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 	classpath 'com.google.gms:google-services:4.3.10'
     }
+dependencies { 
+     classpath 'com.android.tools.build:gradle:3.3.0' 
+     classpath 'com.google.gms:google-services:4.2.0' 
+}
 }
 
 allprojects {
