--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   font_awesome: ^5.10.1
   awesome_icons: ^1.1.0
   shimmer: ^2.0.0
+  logger: ^1.1.0
+  get: ^4.6.5
+  get_storage: ^2.0.3
+  flutter_emoji: ^2.4.0
+  lottie: ^1.3.0
 
 
 
@@ -52,4 +57,14 @@ flutter:
     - lib/images/resistance.jpg
     - lib/images/resistance2.jpg
     - lib/images/entree.jpg
+    - lib/assets/first.json
+    - lib/assets/second.json
+    - lib/assets/last.json
+    - lib/assets/last2.json
+    - lib/assets/boubakh1.json
+    - lib/assets/boubakh2.json
+    - lib/assets/boubakh3.json
+    - images/BalXawFood(1).png
+    - images/BalXawFood.png
+
 
